# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "raw-git-experiments"
version                                 = "0.0.0-git"
publish                                 = false
edition                                 = "2021"


[dependencies]
mmrbi                                   = "0.0.18"
flate2                                  = "1"
sha-1                                   = "0.10"    # XXX: for interop with legacy git sha1s - replace with sha256 soon since I'm not really encumbered by needing said interop
