# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "raw-git-experiments"
version                                 = "0.0.0-git"
publish                                 = false
edition                                 = "2021"


[dependencies]
mmrbi                                   = "0.0.18"
flate2                                  = "1"
sha2                                    = "0.10"
